syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "argos_proto/type.proto";
import "sensr_proto/type.proto";

package sensr_proto;

// The way to assign Field Numbers
// 1 ~ 15 : very frequently occurring message elements
// 101 ~ 2047 : normally occuring message elements
// more detail: https://developers.google.com/protocol-buffers/docs/proto3#assigning-field-numbers

option cc_enable_arenas = true;

service LidarPerceptionService {
  rpc RegularObjectUpdate(google.protobuf.Empty) returns (stream RegularObjectResponse) {
  }
  rpc SendCommand(CommandRequest) returns (CommandResponse) {
    option (google.api.http) = {
      post: "/send"
    };
  }
}

enum Command {
  CMD_NONE = 0;
  CMD_START = 1;
  CMD_STOP = 2;
  CMD_STOP_PROG = 3;
  CMD_LOAD = 4;
  CMD_SAVE = 5;
  CMD_SELECT_ITEM = 6;
  CMD_DESELECT_ITEM = 7;
  CMD_CUSTOM = 8;
}

message CommandRequest {
  Command command = 1;
  map<string, string> param = 2;
}

message CommandResponse {
  int32 return_code = 1;
  map<string, string> param = 2;
}

message RegularObjectResponse {
  google.protobuf.Timestamp time_stamp = 1;
  repeated Object objects = 2;            // TODO: Need to define sensr's own Object type
}

// Actual message using in SENSR SDK
message OutputMessage {
  google.protobuf.Timestamp time_stamp = 1;
  repeated argos_proto.Object objects = 2;            // TODO: Need to define sensr's own Object type
  repeated argos_proto.Zone region_of_interest = 101; // TODO:Need to define sensr's own Zone type
  bytes ground_points = 102;              // Data type of points is Vector3f(12bytes). When you parsing this data, please be aware of this.
}
